--- a/Projeto Code1Line/Projeto Code1Line.csproj
+++ b/Projeto Code1Line/Projeto Code1Line.csproj
@@ -8,6 +8,15 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <Compile Remove="DTOs\AtividadeDTO.cs" />
+    <Compile Remove="DTOs\DepartamentoDTO.cs" />
+    <Compile Remove="DTOs\FuncionarioDTO.cs" />
+    <Compile Remove="DTOs\MonitoramentoDTO.cs" />
+    <Compile Remove="DTOs\UsuarioDTO.cs" />
+    <Compile Remove="Interfaces\DashBoardService.cs" />
+  </ItemGroup>
+
+  <ItemGroup>
     <PackageReference Include="BCrypt.Net-Next" Version="4.0.3" />
     <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="8.0.8" />
     <PackageReference Include="Microsoft.EntityFrameworkCore" Version="9.0.9" />
